# sddl

./: Cargo.toml  README.md  build-wasm.sh  build.rs  index.html  publish.js
assets/: index-B9Kuk3yZ.js  index-Bc98VUT6.js  index-DHsrNGsh.js  index-DthrffOR.js  sddl4web_bg-6orCZvtL.wasm  sddl4web_bg-9W-A6m-E.wasm  sddl4web_bg-COV7b2G6.wasm  sddl4web_bg-CxXV4pLG.wasm
docs/: bootstrap.js  index.html  index.js  package-lock.json  package.json  vite.config.js
docs/sddl4web/: package.json  sddl4web.d.ts  sddl4web.js  sddl4web_bg.js  sddl4web_bg.wasm.d.ts
docs/src/: App.jsx
misc/: sddl.h
sddl/: Cargo.toml  build.rs
sddl-wasm/: Cargo.toml  LICENSE_MIT  package-lock.json
sddl-wasm/pkg/: package.json  sddl_wasm.d.ts  sddl_wasm.js  sddl_wasm_bg.js  sddl_wasm_bg.wasm
sddl-wasm/www/: index.html  package-lock.json
sddl/src/: ace.rs  ace_header.rs  acl.rs  error.rs  lib.rs  offset.rs  parsed_ace_contents.rs  parser.lalrpop  security_descriptor.rs
sddl/src/sid/: identifier_authority.rs  mod.rs  sid_alias.rs  sid_name_use.rs
sddl/tests/: microsoft_cases.rs  ntdsextract2_cases.rs
sddl4web/: .gitignore  Cargo.toml
sddl4web/src/: error.rs  lib.rs
src/: access_mask.rs  ace.rs  ace_flags.rs  ace_header.rs  acl.rs  control_flags.rs  error.rs  guid.rs  lib.rs  offset.rs  parser.lalrpop  parsing.rs  raw_size.rs  sddl_h.rs  security_descriptor.rs  security_identifier.rs  sid.rs  sid_identifier_authority.rs
src/sid/: identifier_authority.rs  mod.rs
tests/: ntdsextract2_cases.rs  parser.rs
