[workspace.package]
version = "0.0.12"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/sddl"
repository = "https://github.com/janstarke/sddl"

[workspace]
resolver = "2"
members = [
    "sddl",
    "sddl4web",
]
