[workspace.package]
version = "0.0.19"
authors = ["Jan Starke <jan.starke@posteo.de>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2021"
documentation = "https://docs.rs/sddl"
repository = "https://codeberg.org/janstarke/sddl"

[workspace]
resolver = "2"
members = [
    "sddl",
    "sddl4web",
]
