[package]
name = "sddl"
description = "a library to parse and analyse SDDL Strings"
repository.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
documentation.workspace = true


[[bin]]
name="sddlinfo"
path="src/bin/sddlinfo.rs"

[dependencies]
binrw = "0.14.0"
bitflags = {version="2.6.0", features=["serde"]}
getset = "0"
strum = {version="0", features=["derive"]}
thiserror = "1.0.64"
uuid = {version="1.6", features=["serde", "v4"]}
lalrpop-util = { version = "0.22.0", features = ["lexer", "unicode"] }
lazy_static = "1.5"
lazy-regex = "3"
derivative = "2.2"

clap={version="4.5", features=["derive"]}
anyhow="1"
serde_json = "1.0.132"
serde = {version="1", features=["derive"]}

[build-dependencies]
lazy-regex = "3"
lalrpop = "0.22.0"

[dev-dependencies]
base64 = "0.22"
